Fix z-index on product slider

--- a/src/pages/product/ProductImages/ProductImages.scss
+++ b/src/pages/product/ProductImages/ProductImages.scss
@@ -67,7 +67,7 @@
       transform: initial;
       bottom: 0;
       top: initial;
-      z-index: 10;
+      z-index: 1;
     }
 
     .slick-next {
